--- a/package.json
+++ b/package.json
@@ -9,11 +9,32 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@google-cloud/vision": "^4.3.0",
+    "@google/generative-ai": "^0.16.0",
+    "@mui/icons-material": "^5.16.5",
+    "@mui/material": "^5.16.5",
+    "chart.js": "^4.4.3",
+    "firebase": "^10.12.4",
+    "fs": "^0.0.1-security",
+    "mqtt": "^5.9.1",
+    "next": "14.2.5",
+    "notistack": "^3.0.1",
+    "openai": "^4.53.2",
+    "paho-mqtt": "^1.1.0",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
-    "next": "14.2.5"
+    "react-router-dom": "^6.25.1",
+    "react-webcam": "^7.2.0",
+    "recharts": "^2.12.7"
   },
   "devDependencies": {
+    "@types/paho-mqtt": "^1.0.10",
     "eslint": "^8",
     "eslint-config-next": "14.2.5"
   }
